--- a/wikiedu/media/sass/extra.scss
+++ b/wikiedu/media/sass/extra.scss
@@ -20,6 +20,7 @@ $dark-color: #4c4c4c;
 $pale-color: rgb(134, 141, 170);
 $light-color: #e8e9ed;
 $title-color: #646D92;
+$dark-text-color: #848daa;
 $placeholder-color: #e0e0e0;
 $tag-bg-color: #f5f5f5;
 $tag-border-color: #e7e7e7;
@@ -112,6 +113,23 @@ h1.section-title,
 .vote-number,
 .question-page .vote-number {
     font-family: $heading-font;
+}
+
+.section-title,
+.question-page #fmanswer h2 {
+    color: $dark-text-color;
+}
+
+input[type="text"], 
+input[type="password"], 
+select, 
+textarea, 
+#askFormBar .questionTitleInput,
+.wmd-container,
+.js-simple-editor,
+.folded-editor,
+.mock-editor {
+    border-color: #919cbe;
 }
 
 #questionCount,
@@ -216,9 +234,10 @@ body.legacy-post {
 
     a {
         color: #dadada;
+        display: inline-block !important;
         font-size: 16px;
-        line-height: 27px;
-        height: 27px;
+        line-height: 40px !important;
+        height: 40px !important;
     }
 
     a.on {
@@ -627,6 +646,9 @@ input[type="submit"].link {
 }
 
 .tabsA, .tabsC {
+    a {
+        color:  $dark-text-color;
+    }
     .label, a.on, a:hover {
         color: $title-color;
     }
